src/kontrol/solidity/SolidityParser.py
# Generated from src/kontrol/solidity/Solidity.g4 by ANTLR 4.13.2
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class SolidityParser(Parser):

    grammarFileName = "Solidity.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "'&&'", "'||'", "'!'", "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'.'", "'['", "']'"]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "BOOLEAN_LITERAL",
        "INTEGER",
        "ADDRESS",
        "VariableName",
        "LengthAccess",
        "ArrayElement",
        "MappingElement",
        "AddressLiteral",
        "BlockAccess",
        "MsgAccess",
        "RelOp",
        "WS",
    ]

    RULE_expression = 0
    RULE_booleanExpression = 1
    RULE_arithmeticExpression = 2
    RULE_atom = 3
    RULE_contractVariableAccessExpr = 4
    RULE_contractVariableArrayElemExpr = 5

    ruleNames = [
        "expression",
        "booleanExpression",
        "arithmeticExpression",
        "atom",
        "contractVariableAccessExpr",
        "contractVariableArrayElemExpr",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    BOOLEAN_LITERAL = 13
    INTEGER = 14
    ADDRESS = 15
    VariableName = 16
    LengthAccess = 17
    ArrayElement = 18
    MappingElement = 19
    AddressLiteral = 20
    BlockAccess = 21
    MsgAccess = 22
    RelOp = 23
    WS = 24

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def booleanExpression(self):
            return self.getTypedRuleContext(SolidityParser.BooleanExpressionContext, 0)

        def getRuleIndex(self):
            return SolidityParser.RULE_expression

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpression"):
                listener.enterExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpression"):
                listener.exitExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitExpression"):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)

    def expression(self):

        localctx = SolidityParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.booleanExpression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BooleanExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return SolidityParser.RULE_booleanExpression

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class RelationalExpressionContext(BooleanExpressionContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.BooleanExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmeticExpression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SolidityParser.ArithmeticExpressionContext)
            else:
                return self.getTypedRuleContext(SolidityParser.ArithmeticExpressionContext, i)

        def RelOp(self):
            return self.getToken(SolidityParser.RelOp, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRelationalExpression"):
                listener.enterRelationalExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRelationalExpression"):
                listener.exitRelationalExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRelationalExpression"):
                return visitor.visitRelationalExpression(self)
            else:
                return visitor.visitChildren(self)

    class AndExpressionContext(BooleanExpressionContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.BooleanExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def booleanExpression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SolidityParser.BooleanExpressionContext)
            else:
                return self.getTypedRuleContext(SolidityParser.BooleanExpressionContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAndExpression"):
                listener.enterAndExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAndExpression"):
                listener.exitAndExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAndExpression"):
                return visitor.visitAndExpression(self)
            else:
                return visitor.visitChildren(self)

    class BooleanLiteralContext(BooleanExpressionContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.BooleanExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOLEAN_LITERAL(self):
            return self.getToken(SolidityParser.BOOLEAN_LITERAL, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBooleanLiteral"):
                listener.enterBooleanLiteral(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBooleanLiteral"):
                listener.exitBooleanLiteral(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBooleanLiteral"):
                return visitor.visitBooleanLiteral(self)
            else:
                return visitor.visitChildren(self)

    class NotExpressionContext(BooleanExpressionContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.BooleanExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def booleanExpression(self):
            return self.getTypedRuleContext(SolidityParser.BooleanExpressionContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNotExpression"):
                listener.enterNotExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNotExpression"):
                listener.exitNotExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNotExpression"):
                return visitor.visitNotExpression(self)
            else:
                return visitor.visitChildren(self)

    class OrExpressionContext(BooleanExpressionContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.BooleanExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def booleanExpression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SolidityParser.BooleanExpressionContext)
            else:
                return self.getTypedRuleContext(SolidityParser.BooleanExpressionContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOrExpression"):
                listener.enterOrExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOrExpression"):
                listener.exitOrExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOrExpression"):
                return visitor.visitOrExpression(self)
            else:
                return visitor.visitChildren(self)

    class ParenthesizedBooleanExpressionContext(BooleanExpressionContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.BooleanExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def booleanExpression(self):
            return self.getTypedRuleContext(SolidityParser.BooleanExpressionContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParenthesizedBooleanExpression"):
                listener.enterParenthesizedBooleanExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParenthesizedBooleanExpression"):
                listener.exitParenthesizedBooleanExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParenthesizedBooleanExpression"):
                return visitor.visitParenthesizedBooleanExpression(self)
            else:
                return visitor.visitChildren(self)

    def booleanExpression(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SolidityParser.BooleanExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_booleanExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
            if la_ == 1:
                localctx = SolidityParser.NotExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 15
                self.match(SolidityParser.T__2)
                self.state = 16
                self.booleanExpression(4)
                pass

            elif la_ == 2:
                localctx = SolidityParser.RelationalExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 17
                self.arithmeticExpression(0)
                self.state = 18
                self.match(SolidityParser.RelOp)
                self.state = 19
                self.arithmeticExpression(0)
                pass

            elif la_ == 3:
                localctx = SolidityParser.BooleanLiteralContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 21
                self.match(SolidityParser.BOOLEAN_LITERAL)
                pass

            elif la_ == 4:
                localctx = SolidityParser.ParenthesizedBooleanExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 22
                self.match(SolidityParser.T__3)
                self.state = 23
                self.booleanExpression(0)
                self.state = 24
                self.match(SolidityParser.T__4)
                pass

            self._ctx.stop = self._input.LT(-1)
            self.state = 36
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 34
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 1, self._ctx)
                    if la_ == 1:
                        localctx = SolidityParser.AndExpressionContext(
                            self, SolidityParser.BooleanExpressionContext(self, _parentctx, _parentState)
                        )
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_booleanExpression)
                        self.state = 28
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 29
                        self.match(SolidityParser.T__0)
                        self.state = 30
                        self.booleanExpression(7)
                        pass

                    elif la_ == 2:
                        localctx = SolidityParser.OrExpressionContext(
                            self, SolidityParser.BooleanExpressionContext(self, _parentctx, _parentState)
                        )
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_booleanExpression)
                        self.state = 31
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 32
                        self.match(SolidityParser.T__1)
                        self.state = 33
                        self.booleanExpression(6)
                        pass

                self.state = 38
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ArithmeticExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return SolidityParser.RULE_arithmeticExpression

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class SubtractExpressionContext(ArithmeticExpressionContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.ArithmeticExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmeticExpression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SolidityParser.ArithmeticExpressionContext)
            else:
                return self.getTypedRuleContext(SolidityParser.ArithmeticExpressionContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSubtractExpression"):
                listener.enterSubtractExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSubtractExpression"):
                listener.exitSubtractExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSubtractExpression"):
                return visitor.visitSubtractExpression(self)
            else:
                return visitor.visitChildren(self)

    class DivideExpressionContext(ArithmeticExpressionContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.ArithmeticExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmeticExpression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SolidityParser.ArithmeticExpressionContext)
            else:
                return self.getTypedRuleContext(SolidityParser.ArithmeticExpressionContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDivideExpression"):
                listener.enterDivideExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDivideExpression"):
                listener.exitDivideExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDivideExpression"):
                return visitor.visitDivideExpression(self)
            else:
                return visitor.visitChildren(self)

    class AddExpressionContext(ArithmeticExpressionContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.ArithmeticExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmeticExpression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SolidityParser.ArithmeticExpressionContext)
            else:
                return self.getTypedRuleContext(SolidityParser.ArithmeticExpressionContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAddExpression"):
                listener.enterAddExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAddExpression"):
                listener.exitAddExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAddExpression"):
                return visitor.visitAddExpression(self)
            else:
                return visitor.visitChildren(self)

    class MultiplyExpressionContext(ArithmeticExpressionContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.ArithmeticExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmeticExpression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SolidityParser.ArithmeticExpressionContext)
            else:
                return self.getTypedRuleContext(SolidityParser.ArithmeticExpressionContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMultiplyExpression"):
                listener.enterMultiplyExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMultiplyExpression"):
                listener.exitMultiplyExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMultiplyExpression"):
                return visitor.visitMultiplyExpression(self)
            else:
                return visitor.visitChildren(self)

    class AtomExpressionContext(ArithmeticExpressionContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.ArithmeticExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(SolidityParser.AtomContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAtomExpression"):
                listener.enterAtomExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAtomExpression"):
                listener.exitAtomExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAtomExpression"):
                return visitor.visitAtomExpression(self)
            else:
                return visitor.visitChildren(self)

    def arithmeticExpression(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SolidityParser.ArithmeticExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_arithmeticExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = SolidityParser.AtomExpressionContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 40
            self.atom()
            self._ctx.stop = self._input.LT(-1)
            self.state = 56
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 4, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 54
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 3, self._ctx)
                    if la_ == 1:
                        localctx = SolidityParser.AddExpressionContext(
                            self, SolidityParser.ArithmeticExpressionContext(self, _parentctx, _parentState)
                        )
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmeticExpression)
                        self.state = 42
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 43
                        self.match(SolidityParser.T__5)
                        self.state = 44
                        self.arithmeticExpression(6)
                        pass

                    elif la_ == 2:
                        localctx = SolidityParser.SubtractExpressionContext(
                            self, SolidityParser.ArithmeticExpressionContext(self, _parentctx, _parentState)
                        )
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmeticExpression)
                        self.state = 45
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 46
                        self.match(SolidityParser.T__6)
                        self.state = 47
                        self.arithmeticExpression(5)
                        pass

                    elif la_ == 3:
                        localctx = SolidityParser.MultiplyExpressionContext(
                            self, SolidityParser.ArithmeticExpressionContext(self, _parentctx, _parentState)
                        )
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmeticExpression)
                        self.state = 48
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 49
                        self.match(SolidityParser.T__7)
                        self.state = 50
                        self.arithmeticExpression(4)
                        pass

                    elif la_ == 4:
                        localctx = SolidityParser.DivideExpressionContext(
                            self, SolidityParser.ArithmeticExpressionContext(self, _parentctx, _parentState)
                        )
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmeticExpression)
                        self.state = 51
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 52
                        self.match(SolidityParser.T__8)
                        self.state = 53
                        self.arithmeticExpression(3)
                        pass

                self.state = 58
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 4, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return SolidityParser.RULE_atom

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class ParenthesizedArithmeticExpressionContext(AtomContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmeticExpression(self):
            return self.getTypedRuleContext(SolidityParser.ArithmeticExpressionContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParenthesizedArithmeticExpression"):
                listener.enterParenthesizedArithmeticExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParenthesizedArithmeticExpression"):
                listener.exitParenthesizedArithmeticExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParenthesizedArithmeticExpression"):
                return visitor.visitParenthesizedArithmeticExpression(self)
            else:
                return visitor.visitChildren(self)

    class LengthAccessContext(AtomContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LengthAccess(self):
            return self.getToken(SolidityParser.LengthAccess, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLengthAccess"):
                listener.enterLengthAccess(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLengthAccess"):
                listener.exitLengthAccess(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLengthAccess"):
                return visitor.visitLengthAccess(self)
            else:
                return visitor.visitChildren(self)

    class ContractVariableAccessContext(AtomContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def contractVariableAccessExpr(self):
            return self.getTypedRuleContext(SolidityParser.ContractVariableAccessExprContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterContractVariableAccess"):
                listener.enterContractVariableAccess(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitContractVariableAccess"):
                listener.exitContractVariableAccess(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitContractVariableAccess"):
                return visitor.visitContractVariableAccess(self)
            else:
                return visitor.visitChildren(self)

    class VariableContext(AtomContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VariableName(self):
            return self.getToken(SolidityParser.VariableName, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVariable"):
                listener.enterVariable(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVariable"):
                listener.exitVariable(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVariable"):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)

    class MappingElementContext(AtomContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MappingElement(self):
            return self.getToken(SolidityParser.MappingElement, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMappingElement"):
                listener.enterMappingElement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMappingElement"):
                listener.exitMappingElement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMappingElement"):
                return visitor.visitMappingElement(self)
            else:
                return visitor.visitChildren(self)

    class BlockAccessContext(AtomContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BlockAccess(self):
            return self.getToken(SolidityParser.BlockAccess, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBlockAccess"):
                listener.enterBlockAccess(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBlockAccess"):
                listener.exitBlockAccess(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBlockAccess"):
                return visitor.visitBlockAccess(self)
            else:
                return visitor.visitChildren(self)

    class AddressLiteralContext(AtomContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def AddressLiteral(self):
            return self.getToken(SolidityParser.AddressLiteral, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAddressLiteral"):
                listener.enterAddressLiteral(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAddressLiteral"):
                listener.exitAddressLiteral(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAddressLiteral"):
                return visitor.visitAddressLiteral(self)
            else:
                return visitor.visitChildren(self)

    class ContractVariableArrayElementContext(AtomContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def contractVariableArrayElemExpr(self):
            return self.getTypedRuleContext(SolidityParser.ContractVariableArrayElemExprContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterContractVariableArrayElement"):
                listener.enterContractVariableArrayElement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitContractVariableArrayElement"):
                listener.exitContractVariableArrayElement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitContractVariableArrayElement"):
                return visitor.visitContractVariableArrayElement(self)
            else:
                return visitor.visitChildren(self)

    class ArrayElementContext(AtomContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ArrayElement(self):
            return self.getToken(SolidityParser.ArrayElement, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterArrayElement"):
                listener.enterArrayElement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitArrayElement"):
                listener.exitArrayElement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitArrayElement"):
                return visitor.visitArrayElement(self)
            else:
                return visitor.visitChildren(self)

    class IntegerLiteralContext(AtomContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(SolidityParser.INTEGER, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIntegerLiteral"):
                listener.enterIntegerLiteral(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIntegerLiteral"):
                listener.exitIntegerLiteral(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitIntegerLiteral"):
                return visitor.visitIntegerLiteral(self)
            else:
                return visitor.visitChildren(self)

    class MsgAccessContext(AtomContext):

        def __init__(self, parser, ctx: ParserRuleContext):  # actually a SolidityParser.AtomContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MsgAccess(self):
            return self.getToken(SolidityParser.MsgAccess, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMsgAccess"):
                listener.enterMsgAccess(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMsgAccess"):
                listener.exitMsgAccess(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMsgAccess"):
                return visitor.visitMsgAccess(self)
            else:
                return visitor.visitChildren(self)

    def atom(self):

        localctx = SolidityParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_atom)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 5, self._ctx)
            if la_ == 1:
                localctx = SolidityParser.VariableContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.match(SolidityParser.VariableName)
                pass

            elif la_ == 2:
                localctx = SolidityParser.LengthAccessContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.match(SolidityParser.LengthAccess)
                pass

            elif la_ == 3:
                localctx = SolidityParser.ArrayElementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.match(SolidityParser.ArrayElement)
                pass
